Bug 380297 - Recipients counter miscounts number of message recipients
Summary: Recipients counter miscounts number of message recipients
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 5.5.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-29 02:03 UTC by Daniel
Modified: 2017-06-14 11:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.5.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel 2017-05-29 02:03:41 UTC
Steps to reproduce:
1. Open a composer window
2. Type or page A@example.com into the To field
3. Copy the following string: B@example.com, C@example.com, D@example.com
4. Select the contents of the To field (selection should read A@example.com)
5. Paste in the three addresses you selected earlier on top of the selection

Expected behaviour:
To the right of the To field, it should read “3 recipients.”

Actual behaviour:
To the right of the To field, it should says “4 recipients” even though one was replaced when pasting in a new set of recipients.
Comment 1 Laurent Montel 2017-06-14 11:10:56 UTC
I confirm it.
I will fix it soon.
Comment 2 Laurent Montel 2017-06-14 11:56:35 UTC
Git commit a6536bca179aa8052de973e5563de04f9dc07581 by Montel Laurent.
Committed on 14/06/2017 at 11:56.
Pushed by mlaurent into branch 'Applications/17.04'.

Fix Bug 380297 - Recipients counter miscounts number of message recipients

FIXED-IN: 5.5.3

M  +1    -0    messagecomposer/src/recipient/recipientline.cpp
M  +11   -5    messagecomposer/src/recipient/recipientseditor.cpp

https://commits.kde.org/messagelib/a6536bca179aa8052de973e5563de04f9dc07581