Fix Bug 380297 - Recipients counter miscounts number of message recipients

FIXED-IN: 5.5.3
BUG: 380297